--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-            <a href="genres.html">
+            <a href="genre.html">
             <img src="https://images.pexels.com/photos/5082566/pexels-photo-5082566.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="100%" height="100%">
             </a>
             <div class="card-body">
@@ -132,7 +132,9 @@
               <p class="card-text">An interesting look into the top genres for each major streaming service and how they differ.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <a href="genre.html">
+                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  </a>  
                 </div>
               </div>
             </div>
@@ -148,7 +150,9 @@
               <p class="card-text">A breakdown of the type of content (movies vs tv shows) in each of the four major streaming services </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
+                    <a href="type.html">
                   <button type="button" class="btn btn-sm btn-outline-secondary" href="#">View</button>
+                    </a>
                 </div>
               </div>
             </div>
@@ -164,7 +168,9 @@
               <p class="card-text">Which streaming service has more older shows and movies? Which is more up to date? Let's find out.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
+                    <a href="year.html">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    </a>
                 </div>
               </div>
             </div>
