updated html files. building genre.html as template for type and year pages. still need data page and process page.

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </a>
             <div class="card-body">
               <p class="lead text-muted">Content Type Analysis (Movie vs TV Shows)</p>
-              <p class="card-text">A breakdown of the type of content (movies vs tv shows) in each of the four major streaming services </p>
+              <p class="card-text">A breakdown of the type of content (movies vs tv shows) in each of the four major streaming services.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                     <a href="type.html">
