--- a/genre.html
+++ b/genre.html
@@ -126,10 +126,17 @@
       <article class="blog-post">
         <h2 class="blog-post-title mb-1">Sample blog post</h2>
         <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>
-
-        <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
-        <hr>
-        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
+        <div class="row g-5">
+            <div class="col-md-4">
+            <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
+            <hr>
+            <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
+            </div>
+            <div class="col-md-8">
+            <img src="genres/prime_genres.jpg" width="90%" height="90%">
+            </div>
+        </div>
+        
         <h2>Blockquotes</h2>
         <p>This is an example blockquote in action:</p>
         <blockquote class="blockquote">
@@ -246,36 +253,44 @@
     </div>
 
     <div class="col-md-4">
-      <div class="position-sticky" style="top: 2rem;">
+      <div class="position-static" style="top: 2rem;">
         <div class="p-4 mb-3 bg-light rounded">
-          <h4 class="fst-italic">About</h4>
-          <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
+            <h4 class="fw-light"><a href="index.html">Home</a></h4>
+          <a href="index.html">
+            <img src="https://images.pexels.com/photos/1444416/pexels-photo-1444416.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="100%" height="100%">
+            </a>
+          <p class="mb-0">Using multiple data sources, we compiled, cleaned, and combined the data in multiple iterations to compare various aspects of Disney+, Hulu, Netflix, and Amazon Prime Video content.</p>
         </div>
 
-        <div class="p-4">
-          <h4 class="fst-italic">Archives</h4>
-          <ol class="list-unstyled mb-0">
-            <li><a href="#">March 2021</a></li>
-            <li><a href="#">February 2021</a></li>
-            <li><a href="#">January 2021</a></li>
-            <li><a href="#">December 2020</a></li>
-            <li><a href="#">November 2020</a></li>
-            <li><a href="#">October 2020</a></li>
-            <li><a href="#">September 2020</a></li>
-            <li><a href="#">August 2020</a></li>
-            <li><a href="#">July 2020</a></li>
-            <li><a href="#">June 2020</a></li>
-            <li><a href="#">May 2020</a></li>
-            <li><a href="#">April 2020</a></li>
-          </ol>
-        </div>
+        <div class="p-4 mb-3 bg-light rounded">
+            <h4 class="fw-light"><a href="genre.html">Comparison of Primary Genres</a></h4>
+            <a href="genre.html">
+                <img src="https://images.pexels.com/photos/5082566/pexels-photo-5082566.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="100%" height="100%">
+                </a>
+            <p class="mb-0">An interesting look into the top genres for each major streaming service and how they differ.</p>
+          </div>
+
+        <div class="p-4 mb-3 bg-light rounded">
+            <h4 class="fw-light"><a href="type.html">Content Type Analysis (Movie vs TV Shows)</a></h4>
+            <a href="type.html">
+                <img src="https://images.pexels.com/photos/2398354/pexels-photo-2398354.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="100%" height="100%">
+                </a>
+            <p class="mb-0">A breakdown of the type of content (movies vs tv shows) in each of the four major streaming services.</p>
+          </div>
+
+        <div class="p-4 mb-3 bg-light rounded">
+            <h4 class="fw-light"><a href="year.html">Analysis of Content by Release Year</a></h4>
+            <a href="year.html">
+                <img src="https://images.pexels.com/photos/4009409/pexels-photo-4009409.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="100%" height="100%">
+                </a>
+            <p class="mb-0">Which streaming service has more older shows and movies? Which is more up to date? Let's find out.</p>
+          </div>
 
         <div class="p-4">
           <h4 class="fst-italic">Elsewhere</h4>
           <ol class="list-unstyled">
-            <li><a href="#">GitHub</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Facebook</a></li>
+            <li><a href="https://github.com/kkidw/Project2">Github Repo</a></li>
+            <li><a href="https://getbootstrap.com/docs/5.2/examples/album/">Bootstrap Theme</a></li>
           </ol>
         </div>
       </div>
