--- a/index.html
+++ b/index.html
@@ -76,34 +76,23 @@
   <body>
     
 <header>
-  <div class="collapse bg-dark" id="navbarHeader">
     <div class="container">
-      <div class="row">
-        <div class="col-sm-8 col-md-7 py-4">
-          <h4 class="text-white">About</h4>
-          <p class="text-white">Using multiple data sources, we compiled, cleaned, and combined the data in multiple iterations to compare various aspects of Disney+, Hulu, Netflix, and Amazon Prime Video content.</p>
-        </div>
-        <div class="col-sm-4 offset-md-1 py-4">
-          <h4 class="text-white">Contact</h4>
-          <ul class="list-unstyled">
-            <li><a href="https://github.com/kkidw/Project2" class="text-white">Github Repo</a></li>
-            <li><a href="https://getbootstrap.com/docs/5.2/examples/album/" class="text-white">Bootstrap Theme</a></li>
+        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+          <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+            <span class="fs-4"><i class="material-icons">query_stats</i>
+            &nbsp; An In-Depth Comparison of Four Major Streaming Services</span>
+          </a>
+    
+          <ul class="nav nav-pills">
+            <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="genre.html" class="nav-link">Genres</a></li>
+            <li class="nav-item"><a href="type.html" class="nav-link">Types</a></li>
+            <li class="nav-item"><a href="year.html" class="nav-link">Years</a></li>
+            <li class="nav-item"><a href="process.html" class="nav-link">Process</a></li>
           </ul>
-        </div>
+        </header>
       </div>
-    </div>
-  </div>
-  <div class="navbar navbar-dark bg-dark shadow-sm">
-    <div class="container">
-      <a href="#" class="navbar-brand d-flex align-items-center">
-        <i class="material-icons">query_stats</i>
-        <strong>&nbsp; An In-Depth Comparison of Four Major Streaming Services</strong>
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    </div>
-  </div>
 </header>
 
 <main>
@@ -188,6 +177,9 @@
     </p>
     <p class="mb-1">Project II : ETL</p>
     <p class="mb-0">by Kayla Kidwell, Vanessa Gonzales, Adam Alvarado, and Rick Springer</p>
+    <br>
+    <br>
+    <p class="mb-1" style="font-size:12px;">Using multiple data sources, we compiled, cleaned, and combined the data in multiple iterations to compare various aspects of Disney+, Hulu, Netflix, and Amazon Prime Video content.</p>
   </div>
 </footer>
 
