--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">Project II - ETL</h1>
         <p class="lead text-muted">A comprehensive look at the ETL process through the lens of data analysis concerning four major streaming services.</br></br>Follow along as we extract the data to understand and begin analysis, clean and mold the data to tell the story within, and load the data to present the underlying insights gleaned from the data. </p>
-        </p>
+        <a href="process.html" class="btn btn-primary my-2">Take a look at our process</a>
       </div>
     </div>
   </section>
