--- a/type.html
+++ b/type.html
@@ -92229,6 +92229,9 @@
     </p>
     <p class="mb-1">Project II : ETL</p>
     <p class="mb-0">by Kayla Kidwell, Vanessa Gonzales, Adam Alvarado, and Rick Springer</p>
+    <br>
+    <br>
+    <p class="mb-1" style="font-size:12px;">Using multiple data sources, we compiled, cleaned, and combined the data in multiple iterations to compare various aspects of Disney+, Hulu, Netflix, and Amazon Prime Video content.</p>
   </div>
 </footer>
 
