--- a/type.html
+++ b/type.html
@@ -114,7 +114,7 @@
             <div class="col-md-8">
             <p>Movies are not only programs with creative concepts to entertain people but, they bring in something new. On the other hand, TV Shows usually give as much creativity in the case of the films; but are designed more to deal with the issues of the moment. Compared to movies, TV shows are longer, which is why they can become boring and repetitive. Movies, usually last a maximum of three hours.</p>
             <hr>
-            <p>Looking at the data reflected on charts, Prime and Netflix Video have highest counts of genres in Drama, Action, Comedy, and Documentary. Prime had the most content overall. Netflix had the highest count of international movies/tv. Though you would expect Animation to be the vast majority in Disney video, it comes in second to Action-Adventure.</p>
+            <p>Before looking at the data, we assumed that Hulu and possibly Netflix would have majority TV shows, with the other two streaming services containing mainly movies. However, after looking at the analysis we found out that all of them house majority of TV shows with the exception of Hulu. Yet even that "majority" is a very narrow one.</p>
             <br>
             <br>
             </div>
