--- a/type.html
+++ b/type.html
@@ -92169,54 +92169,64 @@
   </div>
 </main>
 
-  <div class="album py-5 bg-light">
-    <div class="container">
+<div class="album py-5 bg-light">
+  <div class="container">
 
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-        <div class="col">
-          <div class="card shadow-sm">
-            <img src="https://images.pexels.com/photos/5082566/pexels-photo-5082566.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-            <div class="card-body">
-              <p class="lead text-muted">Comparison of Primary Genres</p>
-              <p class="card-text">An interesting look into the top genres for each major streaming service and how they differ.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+      <div class="col">
+        <div class="card shadow-sm">
+          <a href="genre.html">
+          <img src="https://images.pexels.com/photos/5082566/pexels-photo-5082566.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="100%" height="100%">
+          </a>
+          <div class="card-body">
+            <p class="lead text-muted">Comparison of Primary Genres</p>
+            <p class="card-text">An interesting look into the top genres for each major streaming service and how they differ.</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <a href="genre.html">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                </div>
+                </a>  
               </div>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <img src="https://images.pexels.com/photos/2398354/pexels-photo-2398354.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-            <div class="card-body">
-              <p class="lead text-muted">Content Type Analysis (Movie vs TV Shows)</p>
-              <p class="card-text">A breakdown of the type of content (movies vs tv shows) in each of the four major streaming services </p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary" href="#">View</button>
-                </div>
+      </div>
+      <div class="col">
+        <div class="card shadow-sm">
+          <a href="type.html">
+          <img src="https://images.pexels.com/photos/2398354/pexels-photo-2398354.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="100%" height="100%">
+          </a>
+          <div class="card-body">
+            <p class="lead text-muted">Content Type Analysis (Movie vs TV Shows)</p>
+            <p class="card-text">A breakdown of the type of content (movies vs tv shows) in each of the four major streaming services.</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                  <a href="type.html">
+                <button type="button" class="btn btn-sm btn-outline-secondary" href="#">View</button>
+                  </a>
               </div>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <img src="https://images.pexels.com/photos/4009409/pexels-photo-4009409.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-
-            <div class="card-body">
-                <p class="lead text-muted">Analysis of Content by Release Year</p>
-              <p class="card-text">Which streaming service has more older shows and movies? Which is more up to date? Let's find out.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                </div>
+      </div>
+      <div class="col">
+        <div class="card shadow-sm">
+          <a href="year.html">
+          <img src="https://images.pexels.com/photos/4009409/pexels-photo-4009409.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="100%" height="100%">
+          </a>
+          <div class="card-body">
+              <p class="lead text-muted">Analysis of Content by Release Year</p>
+            <p class="card-text">Which streaming service has more older shows and movies? Which is more up to date? Let's find out.</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                  <a href="year.html">
+                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  </a>
               </div>
             </div>
           </div>
-          <div class="col"></div>
         </div>
+      </div>
 
 
 
